--- a/t_start_eta_chip_chim_function_animated.ipynb
+++ b/t_start_eta_chip_chim_function_animated.ipynb
@@ -9,7 +9,7 @@
       "source": [
         "# Mismatch Parameter Space Animation in Google Colab\n",
         "\n",
-        "This notebook visualizes mismatch data and generates parameter space animations for gravitational wave simulations. It is adapted for Google Colab and allows interactive exploration of the data.\n",
+        "This notebook visualizes mismatch data and generates parameter space animations for gravitational wave simulations.\n",
         "\n",
         "**Sections:**\n",
         "1. Install Required Packages\n",
@@ -23,7 +23,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "20dfe120",
       "metadata": {
         "id": "20dfe120",
@@ -63,7 +63,14 @@
     {
       "cell_type": "code",
       "source": [
+        "\"\"\"\n",
+        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
+        "\"\"\"\n",
         "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
+        "\n",
+        "\"\"\"\n",
+        "Load SXS catalog. TO each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
+        "\"\"\"\n",
         "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n"
       ],
       "metadata": {
@@ -74,7 +81,7 @@
         }
       },
       "id": "gJODCUN5J0yt",
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -118,7 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "a3e9fa41",
       "metadata": {
         "id": "a3e9fa41"
@@ -141,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "2dc9ca3a",
       "metadata": {
         "id": "2dc9ca3a"
@@ -181,7 +188,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "8da7fb4a",
       "metadata": {
         "id": "8da7fb4a"
@@ -213,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "50057444",
       "metadata": {
         "id": "50057444",
@@ -40280,7 +40287,7 @@
         "id": "LA2afIbeKjKy"
       },
       "id": "LA2afIbeKjKy",
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     }
   ],
