--- a/t_start_eta_chip_chim_scatter.ipynb
+++ b/t_start_eta_chip_chim_scatter.ipynb
@@ -2,88 +2,125 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "71xfqlnd6qyU"
+      },
       "source": [
-        "# t_start Scatter Plot Generator\n",
+        "# Scatter points of the starting time in the progenitor parameter space\n",
         "\n",
-        "This notebook replicates the script for generating 2D scatter plots of $t_{\\text{start}}$ over parameter space.\n",
-        "\n",
-        "It supports both *shifted* and *unshifted* versions of the $t_{\\text{start}}$ calculation."
-      ]
+        "This notebook generates the scatter points of $t_{\\text{start}}$ over progenitor parameter space, for a given ringdown model and $(\\ell,|m|)$ harmonic."
+      ],
+      "id": "71xfqlnd6qyU"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "V7V2C3YN6qyX"
+      },
       "source": [
-        "## Imports & Settings"
-      ]
+        "**Imports & Settings**"
+      ],
+      "id": "V7V2C3YN6qyX"
     },
     {
       "cell_type": "code",
       "execution_count": 1,
-      "metadata": {},
+      "metadata": {
+        "id": "rETXuW316qyY"
+      },
       "outputs": [],
       "source": [
+        "# Standard library\n",
         "import os\n",
+        "\n",
+        "# Scientific / numeric\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "from scipy.interpolate import interp1d\n",
+        "\n",
+        "# Plotting\n",
         "import matplotlib.pyplot as plt\n",
         "from matplotlib import rcParams\n",
-        "import seaborn as sns\n",
         "from matplotlib.colors import LinearSegmentedColormap\n",
-        "from scipy.interpolate import interp1d\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Plot config\n",
         "rcParams['text.usetex'] = True\n",
-        "rcParams['font.size'] = 22"
-      ]
+        "rcParams['font.size'] = 22\n"
+      ],
+      "id": "rETXuW316qyY"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "Q66Z6oFu6qyY"
+      },
       "source": [
-        "## Paths & Parameters"
-      ]
+        "**Load mismatch results and NR simulations information**"
+      ],
+      "id": "Q66Z6oFu6qyY"
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 3,
       "id": "d4ab953e",
-      "metadata": {},
+      "metadata": {
+        "id": "d4ab953e",
+        "outputId": "ca13ae8c-0293-45f0-ccf4-ec78361f6707",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
-            "--2025-11-01 16:47:49--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
+            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "/tmp/ipython-input-495155260.py:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "  Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
+            "/tmp/ipython-input-495155260.py:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "  Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-11-01 20:00:49--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz [following]\n",
-            "--2025-11-01 16:47:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2025-11-01 20:00:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 583752 (570K) [application/octet-stream]\n",
             "Saving to: ‘avg_mismatches_all_times.npz.1’\n",
             "\n",
-            "avg_mismatches_all_ 100%[===================>] 570.07K  --.-KB/s    in 0.04s   \n",
+            "avg_mismatches_all_ 100%[===================>] 570.07K  --.-KB/s    in 0.1s    \n",
             "\n",
-            "2025-11-01 16:47:50 (15.5 MB/s) - ‘avg_mismatches_all_times.npz.1’ saved [583752/583752]\n",
+            "2025-11-01 20:00:50 (4.41 MB/s) - ‘avg_mismatches_all_times.npz.1’ saved [583752/583752]\n",
             "\n",
-            "--2025-11-01 16:47:50--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving github.com (github.com)... 140.82.121.4\n",
-            "Connecting to github.com (github.com)|140.82.121.4|:443... connected.\n",
+            "--2025-11-01 20:00:50--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
             "HTTP request sent, awaiting response... 302 Found\n",
             "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt [following]\n",
-            "--2025-11-01 16:47:51--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.108.133, 185.199.109.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "--2025-11-01 20:00:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 21878 (21K) [text/plain]\n",
             "Saving to: ‘SXS_BBH_nonprec_nonecc_all.txt.1’\n",
             "\n",
-            "SXS_BBH_nonprec_non 100%[===================>]  21.37K  --.-KB/s    in 0s      \n",
+            "SXS_BBH_nonprec_non 100%[===================>]  21.37K  --.-KB/s    in 0.006s  \n",
             "\n",
-            "2025-11-01 16:47:51 (54.3 MB/s) - ‘SXS_BBH_nonprec_nonecc_all.txt.1’ saved [21878/21878]\n",
+            "2025-11-01 20:00:50 (3.51 MB/s) - ‘SXS_BBH_nonprec_nonecc_all.txt.1’ saved [21878/21878]\n",
             "\n"
           ]
         }
@@ -103,8 +140,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "6lSblDHk6qyZ",
+        "outputId": "2acef454-3c69-4360-fa2a-e54701d01c59"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -167,19 +207,26 @@
         "catalog_file = 'SXS_BBH_nonprec_nonecc_all.txt'\n",
         "thresholds = [0.035]\n",
         "apply_shift = False  # change to True to apply t_shift logic"
-      ]
+      ],
+      "id": "6lSblDHk6qyZ"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "9RH0aCuP6qya"
+      },
       "source": [
         "## Load Data"
-      ]
+      ],
+      "id": "9RH0aCuP6qya"
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "ndQbdETP6qya",
+        "outputId": "e802e3c5-3c96-459e-8164-3cd29fcedccf"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -205,19 +252,25 @@
         "        except: pass\n",
         "\n",
         "print(f\"Loaded {len(id_info)} simulations\")"
-      ]
+      ],
+      "id": "ndQbdETP6qya"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "MAdm7i9b6qya"
+      },
       "source": [
         "## Define Plot Colors"
-      ]
+      ],
+      "id": "MAdm7i9b6qya"
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "TyjaL2dv6qya"
+      },
       "outputs": [],
       "source": [
         "def hex_to_rgb(hex_color):\n",
@@ -236,19 +289,25 @@
         "        hex_to_rgb(\"#EE6677\")\n",
         "    ], 256\n",
         ")"
-      ]
+      ],
+      "id": "TyjaL2dv6qya"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "uTnItPU56qyb"
+      },
       "source": [
         "## Main Plot Function"
-      ]
+      ],
+      "id": "uTnItPU56qyb"
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
-      "metadata": {},
+      "execution_count": null,
+      "metadata": {
+        "id": "3-0AJ6Na6qyb"
+      },
       "outputs": [],
       "source": [
         "def compute_t_start(sim_id, mode, threshold, start_times):\n",
@@ -262,19 +321,26 @@
         "    for t, m in zip(ts, mm):\n",
         "        if m <= threshold: return t\n",
         "    return None"
-      ]
+      ],
+      "id": "3-0AJ6Na6qyb"
     },
     {
       "cell_type": "markdown",
-      "metadata": {},
+      "metadata": {
+        "id": "k7K06r5M6qyb"
+      },
       "source": [
         "## Execute Scatter Plotting"
-      ]
+      ],
+      "id": "k7K06r5M6qyb"
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "id": "8jkVetQb6qyb",
+        "outputId": "70e3fa9c-2737-4d67-ec91-38f023708eaf"
+      },
       "outputs": [
         {
           "name": "stdout",
@@ -321,12 +387,13 @@
         "\n",
         "        # ---- SAVE TO PDF ----\n",
         "        outname = f\"scatter_lm{mode}_thresh_{threshold:.3f}.pdf\"\n",
-        "    \n",
+        "\n",
         "        plt.savefig(outname)\n",
         "        plt.close()\n",
         "\n",
         "        print(f\"✅ Saved: {outname}\")\n"
-      ]
+      ],
+      "id": "8jkVetQb6qyb"
     }
   ],
   "metadata": {
@@ -346,6 +413,9 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.10.11"
+    },
+    "colab": {
+      "provenance": []
     }
   },
   "nbformat": 4,
