--- a/t_start_eta_chip_chim_scatter.ipynb
+++ b/t_start_eta_chip_chim_scatter.ipynb
@@ -52,108 +52,34 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "Q66Z6oFu6qyY"
-      },
       "source": [
-        "**Load mismatch results and NR simulations information**"
+        "**Ask use the model choice, and the $(\\ell,|m|)$ mode to analyze**"
       ],
-      "id": "Q66Z6oFu6qyY"
+      "metadata": {
+        "id": "z-uZtLU1A02q"
+      },
+      "id": "z-uZtLU1A02q"
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
-      "id": "d4ab953e",
+      "execution_count": 4,
       "metadata": {
-        "id": "d4ab953e",
-        "outputId": "ca13ae8c-0293-45f0-ccf4-ec78361f6707",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "/tmp/ipython-input-495155260.py:2: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "  Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
-            "/tmp/ipython-input-495155260.py:8: SyntaxWarning: invalid escape sequence '\\e'\n",
-            "  Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n"
-          ]
         },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2025-11-01 20:00:49--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz [following]\n",
-            "--2025-11-01 20:00:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 583752 (570K) [application/octet-stream]\n",
-            "Saving to: ‘avg_mismatches_all_times.npz.1’\n",
-            "\n",
-            "avg_mismatches_all_ 100%[===================>] 570.07K  --.-KB/s    in 0.1s    \n",
-            "\n",
-            "2025-11-01 20:00:50 (4.41 MB/s) - ‘avg_mismatches_all_times.npz.1’ saved [583752/583752]\n",
-            "\n",
-            "--2025-11-01 20:00:50--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving github.com (github.com)... 20.27.177.113\n",
-            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
-            "HTTP request sent, awaiting response... 302 Found\n",
-            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt [following]\n",
-            "--2025-11-01 20:00:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.109.133, 185.199.108.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 21878 (21K) [text/plain]\n",
-            "Saving to: ‘SXS_BBH_nonprec_nonecc_all.txt.1’\n",
-            "\n",
-            "SXS_BBH_nonprec_non 100%[===================>]  21.37K  --.-KB/s    in 0.006s  \n",
-            "\n",
-            "2025-11-01 20:00:50 (3.51 MB/s) - ‘SXS_BBH_nonprec_nonecc_all.txt.1’ saved [21878/21878]\n",
-            "\n"
-          ]
-        }
-      ],
-      "source": [
-        "\"\"\"\n",
-        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
-        "\"\"\"\n",
-        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
-        "\n",
-        "\n",
-        "\"\"\"\n",
-        "Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
-        "\"\"\"\n",
-        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "6lSblDHk6qyZ",
-        "outputId": "2acef454-3c69-4360-fa2a-e54701d01c59"
+        "outputId": "cb1cd311-7e62-4e99-800c-89d458fc3990"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Please choose a model:\n",
             "- KerrBinary_London\n",
             "- KerrBinary_Cheung\n",
             "- TEOBPM\n",
+            "Enter model name: TEOBPM\n",
             "\n",
             "Please choose a mode:\n",
             "- 22\n",
@@ -161,6 +87,7 @@
             "- 33\n",
             "- 32\n",
             "- 44\n",
+            "Enter mode: 22\n",
             "\n",
             "✅ You selected model = 'TEOBPM' and mode = '22'\n"
           ]
@@ -194,7 +121,96 @@
         "    mode = input(\"Enter mode: \")\n",
         "\n",
         "# Final confirmation\n",
-        "print(f\"\\n✅ You selected model = '{model}' and mode = '{mode}'\")\n",
+        "print(f\"\\n✅ You selected model = '{model}' and mode = '{mode}'\")"
+      ],
+      "id": "6lSblDHk6qyZ"
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9RH0aCuP6qya"
+      },
+      "source": [
+        "**Load mismatch results and NR simulations information**"
+      ],
+      "id": "9RH0aCuP6qya"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ndQbdETP6qya",
+        "outputId": "267b1e48-c29b-4222-eb55-f9babc4e3970"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "<>:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "/tmp/ipython-input-3560512453.py:2: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "  Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
+            "/tmp/ipython-input-3560512453.py:8: SyntaxWarning: invalid escape sequence '\\e'\n",
+            "  Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2025-11-01 20:05:49--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz [following]\n",
+            "--2025-11-01 20:05:49--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/avg_mismatches_all_times.npz\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 583752 (570K) [application/octet-stream]\n",
+            "Saving to: ‘avg_mismatches_all_times.npz.2’\n",
+            "\n",
+            "avg_mismatches_all_ 100%[===================>] 570.07K  --.-KB/s    in 0.1s    \n",
+            "\n",
+            "2025-11-01 20:05:50 (4.62 MB/s) - ‘avg_mismatches_all_times.npz.2’ saved [583752/583752]\n",
+            "\n",
+            "--2025-11-01 20:05:50--  https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
+            "Resolving github.com (github.com)... 20.27.177.113\n",
+            "Connecting to github.com (github.com)|20.27.177.113|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt [following]\n",
+            "--2025-11-01 20:05:50--  https://raw.githubusercontent.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/main/SXS_BBH_nonprec_nonecc_all.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.110.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 21878 (21K) [text/plain]\n",
+            "Saving to: ‘SXS_BBH_nonprec_nonecc_all.txt.2’\n",
+            "\n",
+            "SXS_BBH_nonprec_non 100%[===================>]  21.37K  --.-KB/s    in 0.006s  \n",
+            "\n",
+            "2025-11-01 20:05:51 (3.62 MB/s) - ‘SXS_BBH_nonprec_nonecc_all.txt.2’ saved [21878/21878]\n",
+            "\n",
+            "Loaded 336 simulations\n"
+          ]
+        }
+      ],
+      "source": [
+        "\"\"\"\n",
+        "Load mismatch data distributions. These contain, for the London, Cheung and TEOBPM models, the (\\ell,m) mismatch values for different starting times, where (\\ell,m)={(2,2),(2,1),(3,3),(3,2),(4,4)}.\n",
+        "\"\"\"\n",
+        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/avg_mismatches_all_times.npz\n",
+        "\n",
+        "\n",
+        "\"\"\"\n",
+        "Load SXS catalog information (https://data.black-holes.org/simulations/index.html). To each simulation, we associate to it the triplet $(\\eta,\\chi_{+},\\chi_{-})$.\n",
+        "\"\"\"\n",
+        "!wget https://github.com/francesco-crescimbeni/Interpolating-function-of-ringdown-starting-time/raw/main/SXS_BBH_nonprec_nonecc_all.txt\n",
         "\n",
         "# Set parameters and load data\n",
         "npz_file = 'avg_mismatches_all_times.npz'\n",
@@ -206,37 +222,8 @@
         "# Load SXS catalog\n",
         "catalog_file = 'SXS_BBH_nonprec_nonecc_all.txt'\n",
         "thresholds = [0.035]\n",
-        "apply_shift = False  # change to True to apply t_shift logic"
-      ],
-      "id": "6lSblDHk6qyZ"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "9RH0aCuP6qya"
-      },
-      "source": [
-        "## Load Data"
-      ],
-      "id": "9RH0aCuP6qya"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "ndQbdETP6qya",
-        "outputId": "e802e3c5-3c96-459e-8164-3cd29fcedccf"
-      },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Loaded 336 simulations\n"
-          ]
-        }
-      ],
-      "source": [
+        "apply_shift = False  # change to True to apply t_shift logic\n",
+        "\n",
         "data = np.load(npz_file, allow_pickle=True)\n",
         "avg_mismatches = data['avg_mismatches'].item()\n",
         "\n",
@@ -258,79 +245,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "MAdm7i9b6qya"
-      },
-      "source": [
-        "## Define Plot Colors"
-      ],
-      "id": "MAdm7i9b6qya"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "TyjaL2dv6qya"
-      },
-      "outputs": [],
-      "source": [
-        "def hex_to_rgb(hex_color):\n",
-        "    hex_color = hex_color.lstrip('#')\n",
-        "    return tuple(int(hex_color[i:i+2], 16)/255.0 for i in (0, 2, 4))\n",
-        "\n",
-        "def lighten_color(rgb_color, factor):\n",
-        "    return tuple(c + (1 - c) * factor for c in rgb_color)\n",
-        "\n",
-        "cmap = LinearSegmentedColormap.from_list(\n",
-        "    \"enhanced\", [\n",
-        "        hex_to_rgb(\"#4477AA\"),\n",
-        "        lighten_color(hex_to_rgb(\"#4477AA\"), 0.4),\n",
-        "        (1,1,1),\n",
-        "        lighten_color(hex_to_rgb(\"#EE6677\"), 0.4),\n",
-        "        hex_to_rgb(\"#EE6677\")\n",
-        "    ], 256\n",
-        ")"
-      ],
-      "id": "TyjaL2dv6qya"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "uTnItPU56qyb"
-      },
-      "source": [
-        "## Main Plot Function"
-      ],
-      "id": "uTnItPU56qyb"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "3-0AJ6Na6qyb"
-      },
-      "outputs": [],
-      "source": [
-        "def compute_t_start(sim_id, mode, threshold, start_times):\n",
-        "    ts, mm = [], []\n",
-        "    for t in start_times:\n",
-        "        v = avg_mismatches.get(model,{}).get(mode,{}).get(t,{}).get(sim_id,np.nan)\n",
-        "        if not np.isnan(v) and v>0:\n",
-        "            ts.append(t); mm.append(v)\n",
-        "    if len(ts)<2: return None\n",
-        "    ts, mm = np.array(ts), np.array(mm)\n",
-        "    for t, m in zip(ts, mm):\n",
-        "        if m <= threshold: return t\n",
-        "    return None"
-      ],
-      "id": "3-0AJ6Na6qyb"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "k7K06r5M6qyb"
       },
       "source": [
-        "## Execute Scatter Plotting"
+        "Perform scatter plot"
       ],
       "id": "k7K06r5M6qyb"
     },
@@ -355,6 +273,38 @@
         }
       ],
       "source": [
+        "# Define color plots\n",
+        "\n",
+        "def hex_to_rgb(hex_color):\n",
+        "    hex_color = hex_color.lstrip('#')\n",
+        "    return tuple(int(hex_color[i:i+2], 16)/255.0 for i in (0, 2, 4))\n",
+        "\n",
+        "def lighten_color(rgb_color, factor):\n",
+        "    return tuple(c + (1 - c) * factor for c in rgb_color)\n",
+        "\n",
+        "cmap = LinearSegmentedColormap.from_list(\n",
+        "    \"enhanced\", [\n",
+        "        hex_to_rgb(\"#4477AA\"),\n",
+        "        lighten_color(hex_to_rgb(\"#4477AA\"), 0.4),\n",
+        "        (1,1,1),\n",
+        "        lighten_color(hex_to_rgb(\"#EE6677\"), 0.4),\n",
+        "        hex_to_rgb(\"#EE6677\")\n",
+        "    ], 256\n",
+        ")\n",
+        "\n",
+        "# t_start computation definition\n",
+        "def compute_t_start(sim_id, mode, threshold, start_times):\n",
+        "    ts, mm = [], []\n",
+        "    for t in start_times:\n",
+        "        v = avg_mismatches.get(model,{}).get(mode,{}).get(t,{}).get(sim_id,np.nan)\n",
+        "        if not np.isnan(v) and v>0:\n",
+        "            ts.append(t); mm.append(v)\n",
+        "    if len(ts)<2: return None\n",
+        "    ts, mm = np.array(ts), np.array(mm)\n",
+        "    for t, m in zip(ts, mm):\n",
+        "        if m <= threshold: return t\n",
+        "    return None\n",
+        "\n",
         "# LaTeX labels for axes\n",
         "label_map = {\"eta\": r\"\\eta\", \"chip\": r\"\\chi_+\", \"chim\": r\"\\chi_-\"}\n",
         "\n",
